[project]
name = "Klayines"
version = "1.0"
license = "MIT"
license-files = []

[tool.briefcase]
project_name = "Klayines"
bundle = "com.klayines"

[tool.briefcase.app.Klayines]
formal_name = "Klayines"
description = "P2P Messenger via Tor bridges"
sources = ["."]
requires = ["toga", "flask", "requests", "pysocks"]

[tool.briefcase.app.Klayines.android]
runtime_version = "3.10"
